--- a/styles.css
+++ b/styles.css
@@ -161,8 +161,6 @@ body {
 }
 
 .customer-template {
-   /* pointer-events: none;
-   opacity: 0; */
    margin: 0 4.8vw;
 }
 
@@ -196,7 +194,7 @@ body {
    height: 12vh;
    width: 7vw;
    border-radius: 1vh;
-   background-color: #fadeff;
+   background-color: #fcedff;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -210,10 +208,9 @@ body {
    right: 100%;
    border-style: solid;
    border-width: 2vh;
-   border-color: transparent #fadeff transparent transparent ;
+   border-color: transparent #fcedff transparent transparent;
 }
 
 .cutomer-demands {
-   height: 10vh;
-   width: 7vh;
+   width: 6vw;
 }
