--- a/styles.css
+++ b/styles.css
@@ -166,7 +166,10 @@ body {
    font-size: 5vh
 }
 
+.customerTooltipParent { display: inline-block; }
+
 .customer-template {
+   display: inline-block;
    margin: 0 4.8vw;
 }
 
@@ -200,16 +203,14 @@ body {
    font-size: 5vh;
 }
 
-.customerTooltipParent {
-   position: relative;
-}
+.customerTooltipParent { position: relative; }
 
 .customerTooltip {
    pointer-events: none;
    opacity: 0;
    position: absolute;
    top: 1.8vh;
-   left: 14%;
+   left: 70%;
    height: 12vh;
    width: 7vw;
    border-radius: 1vh;
